<resources>
    <string name="app_name">GeoTask</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_et_1">İş emrinin adı</string>
    <string name="form_et_2">İş emri açıklaması</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="username_hint">Kullanıcı Adı</string>
    <string name="password_hint">Şifre</string>
    <string name="login_button_text">Giriş Yap</string>
    <string name="forgot_password_text">Şifremi Unuttum</string>
    <string name="title">GeoTask</string>
    <string name="signup_button_text">Kayıt Ol</string>
    <string name="already_have_account_text">Hesabın var mı? Giriş yap</string>
    <string name="api_key">5b3ce3597851110001cf6248375d30eae2ea4b419ec4b9d222024c01</string>
    <string name="create_route_button_text">Rota Oluştur</string>
</resources>